--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
+/* Import Slick Carousel styles */
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
